--- a/public/index.html
+++ b/public/index.html
@@ -33,5 +33,6 @@
         <h4>Font Awesome</h4>
         <i class="fa fa-bath" aria-hidden="true"></i>
         <i class="zmdi zmdi-github-alt"></i>
+        <h3>Production just updated</h3>
     <script type="text/javascript" src="js/vendor.js"></script><script type="text/javascript" src="js/app.js"></script></body>
 </html>
