--- a/src/index.html
+++ b/src/index.html
@@ -33,5 +33,6 @@
         <h4>Font Awesome</h4>
         <i class="fa fa-bath" aria-hidden="true"></i>
         <i class="zmdi zmdi-github-alt"></i>
+        <h3>Production just updated</h3>
     </body>
 </html>
