--- a/src/index.html
+++ b/src/index.html
@@ -35,6 +35,6 @@
         <i class="zmdi zmdi-github-alt"></i>
         <span class="flag-icon flag-icon-gr"></span>
         <span class="flag-icon flag-icon-gr flag-icon-squared"></span>
-        <h3>Production updated again</h3>
+        <h3>Production updated - Browsync plugin 3</h3>
     </body>
 </html>
