--- a/src/index.html
+++ b/src/index.html
@@ -39,5 +39,8 @@
         <span class="flag-icon flag-icon-gr"></span>
         <span class="flag-icon flag-icon-gr flag-icon-squared"></span>
         <h3>Production updated - Browsync plugin 3</h3>
+        <p class="text-lowercase">Lowercased text.</p>
+        <p class="text-uppercase">Uppercased text.</p>
+        <p class="text-capitalize">Capitalized text.</p>
     </body>
 </html>
