add class change

--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
         <h4>Font Awesome</h4>
         <i class="fa fa-bath" aria-hidden="true"></i>
         <i class="zmdi zmdi-github-alt"></i>
-        <span class="flag-icon flag-icon-gr"></span>
+        <span class="flag-icon flag-icon-gr change"></span>
         <span class="flag-icon flag-icon-gr flag-icon-squared"></span>
         <h3>Production updated - Browsync plugin 3</h3>
         <p class="text-lowercase">Lowercased text.</p>
