--- a/src/index.html
+++ b/src/index.html
@@ -36,8 +36,8 @@
         <h4>Font Awesome</h4>
         <i class="fa fa-bath" aria-hidden="true"></i>
         <i class="zmdi zmdi-github-alt"></i>
-        <span class="flag-icon flag-icon-gr"></span>
-        <span class="flag-icon flag-icon-gr flag-icon-squared"></span>
+        <span class="change-master flag-icon flag-icon-gr"></span>
+        <span class="change-master flag-icon flag-icon-gr flag-icon-squared"></span>
         <h3>Production updated - Browsync plugin 3</h3>
         <p class="text-lowercase">Lowercased text.</p>
         <p class="text-uppercase">Uppercased text.</p>
