--- a/src/index.html
+++ b/src/index.html
@@ -38,9 +38,6 @@
         <i class="zmdi zmdi-github-alt"></i>
         <span class="change-master flag-icon flag-icon-gr change"></span>
         <span class="change-master flag-icon flag-icon-gr flag-icon-squared"></span>
-        <h3>Production updated - Browsync plugin 3</h3>
-        <p class="text-lowercase">Lowercased text.</p>
-        <p class="text-uppercase">Uppercased text.</p>
-        <p class="text-capitalize">Capitalized text.</p>
+        <h3>Dev-BS4</h3>
     </body>
 </html>
