layout update change

--- a/src/index.html
+++ b/src/index.html
@@ -38,6 +38,6 @@
         <i class="zmdi zmdi-github-alt"></i>
         <span class="change-master flag-icon flag-icon-gr change"></span>
         <span class="change-master flag-icon flag-icon-gr flag-icon-squared"></span>
-        <h3>Dev-BS4</h3>
+        <h3>All Bran-BS4 - test</h3>
     </body>
 </html>
